Quiet some warnings
PiperOrigin-RevId: 203159437