@@ -106,6 +106,7 @@ if [[ "$#" -gt 0 ]]; then
       done
 
       "${DESUGAR}" \
+          "--jvm_flags=--add-opens=java.base/java.lang.invoke=ALL-UNNAMED" \
           "--jvm_flag=-Djdk.internal.lambda.dumpProxyClasses=${TMPDIR}" \
           "@${params}"
       # temp dir deleted by TRAP installed above
@@ -115,6 +116,7 @@ if [[ "$#" -gt 0 ]]; then
 fi
 
 "${DESUGAR}" \
+    "--jvm_flags=--add-opens=java.base/java.lang.invoke=ALL-UNNAMED" \
     "--jvm_flag=-Djdk.internal.lambda.dumpProxyClasses=${TMPDIR}" \
     "$@" \
     "${DESUGAR_JAVA8_LIBS_CONFIG[@]}"
